syntax = "proto3";
package pb;
option go_package = "./pb";
import "common.proto";

message RelationApplyFriendReq {
  RequestHeader header = 1;
}

message RelationApplyFriendResp {
  ResponseHeader header = 1;
}

service relationService {
  //RelationApplyFriend 申请好友
  rpc RelationApplyFriend(RelationApplyFriendReq) returns (RelationApplyFriendResp);
}
